@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="script.module.dropbox"
        name="dropbox"
-       version="2.2.0"
+       version="2.2.1"
        provider-name="micah">
   <requires>
     <import addon="xbmc.python" version="2.1.0"/>
