@@ -1,3 +1,7 @@
+[B]Version 2.2.1[/B]
+
+- fix python error on android
+
 [B]Version 2.2.0[/B]
 
 - dropbox v2.2.0
